Source/WebCore/platform/graphics/win/FontPlatformDataCairoWin.cpp
@@ -56,8 +56,8 @@ void FontPlatformData::platformDataInit(HFONT font, float size, HDC hdc, WCHAR* 
     cairo_font_face_destroy(fontFace);
 }
 
-FontPlatformData::FontPlatformData(cairo_font_face_t* fontFace, float size, bool bold, bool oblique)
-    : m_font(0)
+FontPlatformData::FontPlatformData(HFONT font, cairo_font_face_t* fontFace, float size, bool bold, bool oblique)
+    : m_font(RefCountedGDIHandle<HFONT>::create(font))
     , m_size(size)
     , m_orientation(Horizontal)
     , m_widthVariant(RegularWidth)
